tests/errors/unresolved-param.mpl
$does_not_exist:bar
